set time zone correctly

--- a/circle.yml
+++ b/circle.yml
@@ -1,5 +1,6 @@
-machine:
-  timezone: America/New_York
+notify:
+  webhooks:
+    - url: http://wizarddev-statusbot.herokuapp.com/circle
 deployment:
   staging:
     branch: master
