--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,13 @@
 development:
   adapter: postgresql
   encoding: unicode
+  template: template0
   database: box_score_development_prod
   pool: 5
 
 test:
   adapter: postgresql
   encoding: unicode
+  template: template0
   database: box_score_test
   pool: 5
