--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@ pickle-email-*.html
 
 # Ignore application configuration
 /config/application.yml
+
+# Ignore master key for decrypting credentials and more.
+/config/master.key
